--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </header>
 
   <div class="hero">
-  <img class="coin" src="/bear.png" alt="Bear Coin Logo">
+  <img class="coin" src="bear.png" alt="Bear Coin Logo">
   <h1>Play, Build, and Meme on Bear 0G</h1>
   <p>The $Bear token lives on the 0G Testnet — made for fun, made by degens.</p>
   <div class="btns">
@@ -122,7 +122,7 @@
         Bear 0G is a community-driven token on the 0G testnet, combining memes, tech, and pure fun. No promises, just bears.
       </p>
     </div>
-    <img src="/0g.png" alt="Bear Spotlight">
+    <img src="0g.png" alt="Bear Spotlight">
   </div>
 
   <footer>
