--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
         flex-direction: column;
         text-align: center;
       }
+      .btn {
+      background: #8f00ff;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .btn:hover {
+      background: #a94eff;
+    }
     }
   </style>
 </head>
